# metapad

./: .gitignore  CMakeLists.txt  Makefile  Makefile.custom.linux  Makefile.custom.linux.AMD64  Makefile.custom.linux.i586  Makefile.custom.linux.i686  Makefile.custom.win  README-src351.txt  README.md  README.txt  VisualStudio2010_setup.txt  cdecode.c  cencode.c  encoding.c  english-template.lng  external_viewers.c  file_load.c  file_new.c  file_save.c  file_utils.c  hexdecoder.c  hexencoder.c  language_plugin.c  load_settings.c  metapad-master.sln  metapad-master.vcxproj  metapad-master.vcxproj.filters  metapad.c  metapad.manifest  metapad.rc  metapad_private.res  settings_load.c  settings_save.c  strings.c  utils.c  w32crt.c
include/: cdecode.h  cencode.h  consts.h  encoding.h  external_viewers.h  file_load.h  file_new.h  file_save.h  file_utils.h  globals.h  hexdecoder.h  hexencoder.h  language_plugin.h  macros.h  metapad.h  outmacros.h  resource.h  save_options.h  save_settings.h  settings_load.h  settings_save.h  strings.h  tmp_protos.h  typedefs.h  utils.h  w32crt.h
old/: Dev-cpp_setup.txt  README-src351.txt  VisualStudio2010_setup.txt
unix/: CMakeLists.txt  CROSS_UNIX_WIN32_i586.toolchain  CROSS_UNIX_WIN32_i686.toolchain  CROSS_UNIX_WIN64.toolchain  Makefile.custom.linux.AMD64  Makefile.custom.linux.i586  Makefile.custom.linux.i686  Makefile.custom.win  mingw-unicode-gui.c
